# hedgefund

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  alembic.ini  fly.toml  pyproject.toml
docs/: architecture.md  build-plan.md
docs/adr/: 0001-paper-first-trading-posture.md  0002-hybrid-pipeline-architecture.md  0003-two-branch-alpha-and-validation-asymmetry.md  0004-risk-management-framework.md  0005-trading-scope-universe-strategy-broker-data.md  0006-stack-runtime-and-reporting.md  0007-build-sequencing-and-roadmap.md  0008-validation-data-discipline.md  0009-llm-authored-strategy-contract.md  0010-effective-trial-accounting.md
docs/agents/: domain.md
hedgefund/: config.py  scheduler.py
hedgefund/backtest/: costs.py  data.py  engine.py  metrics.py  strategy.py  trial_log.py  validation.py
hedgefund/broker/: alpaca.py  interface.py
hedgefund/data/: market.py  universe.py
hedgefund/db/: models.py
hedgefund/pipeline/: post_market.py  pre_market.py  signals.py
hedgefund/quant_research/: author.py  compiler.py  dsl.py  neighborhood.py  pipeline.py  registry.py  report.py
hedgefund/reporting/: email_report.py
hedgefund/risk/: sizing.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_backtest_tables.py
scripts/: author_strategy.py  create-github-issues.sh  evaluate_holdout.py  run_backtest.py  smoke_test.py
tests/: test_backtest_engine.py  test_dsl_authoring.py  test_metrics.py  test_risk.py  test_validation.py
