[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hedgefund"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.33.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "structlog>=24.0",
    "resend>=2.0",
    "apscheduler>=3.10,<4.0",
    "pandas>=2.1",
    "psycopg2-binary>=2.9",
    "yfinance>=0.2",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hedgefund*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
